--- a/schedule.html
+++ b/schedule.html
@@ -25,14 +25,14 @@
 <main>
 
 <h2>Friday</h2>
-<p>19:00 Welcome dinner for international guests</p>
+<p>18:00 Welcome Party and Brewery Tour @ Põhjala Brewery</p>
 <h2>Saturday</h2>
-<p>10:00 RT17 Tallinn Royal Charter</p>
-<p>13:00 Day activity for international guests</p>
-<p>19:00 Gala dinner</p>
+<p>10:00 RT17 Tallinn Royal Charter and Banner Lunch @ Tallinn TV Tower</p>
+<p>14:00 Surprise Day Activity</p>
+<p>19:00 Gala dinner @ Tallinn Town Hall</p>
 <h2>Sunday</h2>
 <p>10:00 Farewell brunch for international guests</p>
-<p><em>All venues and event details will be announced later.</em></p>
+<p><em>Please note: Venues and schedule are subject to change in case of unforeseen circumstances.</em></p>
 
 </main>
 <footer>
