--- a/accommodation.html
+++ b/accommodation.html
@@ -24,12 +24,8 @@
 </nav>
 <main>
 
-<p>Accommodation is not included in the event price, giving everyone the freedom to choose where they prefer to stay.
-
-Tallinn offers a wide range of options through Booking.com and Airbnb, from budget to boutique — and thanks to the city’s
-compact size, everything is within a short taxi ride.
-
-Our recommendation: Metropol Hotel (www.metropol.ee), a trusted choice for Tablers during previous international events, conveniently located in the city center..</p>
+<p>Accommodation is not included in the event price, giving everyone the freedom to choose where they prefer to stay. Tallinn offers a wide range of options through Booking.com and Airbnb, from budget to boutique — and thanks to the city’s
+compact size, everything is within a short taxi ride. Our recommendation: Metropol Hotel (www.metropol.ee), a trusted choice for Tablers during previous international events, conveniently located in the city center..</p>
 
 </main>
 <footer>
